--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "nodemon ./index.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "1.19.0",
     "cors": "2.8.5",
     "express": "4.17.1",
     "mongoose": "5.10.14",
-    "ramda": "^0.27.1"
+    "ramda": "0.27.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "2.0.6"
   }
 }
