--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "bcrypt": "5.0.0",
@@ -13,9 +13,11 @@
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.10.14",
+    "pm2": "4.5.0",
     "ramda": "0.27.1"
   },
   "devDependencies": {
+    "dotenv": "8.2.0",
     "nodemon": "2.0.6"
   }
 }
