--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "migrate": "sequelize db:migrate",
+    "build": "sequelize db:migrate --url $DATABASE_URL"
   },
   "dependencies": {
     "bcrypt": "5.0.0",
@@ -13,8 +15,12 @@
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.10.14",
+    "pg": "8.5.1",
+    "pg-hstore": "2.3.3",
     "pm2": "4.5.0",
-    "ramda": "0.27.1"
+    "ramda": "0.27.1",
+    "sequelize": "6.3.5",
+    "sequelize-cli": "6.2.0"
   },
   "devDependencies": {
     "dotenv": "8.2.0",
