--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node bin/www",
     "migrate": "sequelize db:migrate",
     "build": "sequelize db:migrate --url $DATABASE_URL"
   },
