--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "devDependencies": {
     "dotenv": "8.2.0",
     "nodemon": "2.0.6"
+  },
+  "engine" : {
+    "node": "10.19.0",
+    "npm": "6.13.4"
   }
 }
