--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "migrate": "sequelize db:migrate",
+    "migrate:undo": "sequelize db:migrate:undo:all",
     "build": "sequelize db:migrate --url $DATABASE_URL"
   },
   "dependencies": {
@@ -20,13 +21,14 @@
     "pm2": "4.5.0",
     "ramda": "0.27.1",
     "sequelize": "6.3.5",
-    "sequelize-cli": "6.2.0"
+    "sequelize-cli": "6.2.0",
+    "sequelize-replace-enum-postgres": "^1.6.0"
   },
   "devDependencies": {
     "dotenv": "8.2.0",
     "nodemon": "2.0.6"
   },
-  "engine" : {
+  "engine": {
     "node": "10.19.0",
     "npm": "6.13.4"
   }
