--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "ramda": "0.27.1",
     "sequelize": "6.3.5",
     "sequelize-cli": "6.2.0",
-    "sequelize-replace-enum-postgres": "1.6.0"
+    "sequelize-replace-enum-postgres": "^1.6.0"
   },
   "devDependencies": {
     "dotenv": "8.2.0",
