--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn start ./bin/www",
+    "start": "node ./bin/www",
     "migrate": "sequelize db:migrate",
     "migrate:undo": "sequelize db:migrate:undo:all",
     "build": "sequelize db:migrate --url $DATABASE_URL"
@@ -31,6 +31,7 @@
   },
   "engine": {
     "node": "14.17.0",
-    "npm": "6.14.13"
+    "npm": "6.14.13",
+    "yarn": "1.22.10"
   }
 }
